--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "enzyme": "^3.11.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "node-sass": "^7.0.1"
   }
 }
